week_15/PUBLIC/css/main.css
/* ... */
/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */
.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px; }

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto; }

/*
 * Hide visually and from screen readers, but maintain layout
 */
.invisible {
  visibility: hidden; }

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
.clearfix:before, header nav:before, section:before, .no-js .no-js-gallery .row:before,
.clearfix:after,
header nav:after,
section:after,
.no-js .no-js-gallery .row:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */ }

.clearfix:after, header nav:after, section:after, .no-js .no-js-gallery .row:after {
  clear: both; }

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */
@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */ }
@media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */ }
/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */
@media print {
  *,
  *:before,
  *:after,
  *:first-letter,
  *:first-line {
    background: transparent !important;
    color: #000 !important;
    /* Black prints faster:
       http://www.sanbeiji.com/archives/953 */
    box-shadow: none !important;
    text-shadow: none !important; }

  a,
  a:visited {
    text-decoration: underline; }

  a[href]:after {
    content: " (" attr(href) ")"; }

  abbr[title]:after {
    content: " (" attr(title) ")"; }

  /*
   * Don't show links that are fragment identifiers,
   * or use the `javascript:` pseudo protocol
   */
  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: ""; }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid; }

  /*
   * Printing Tables:
   * http://css-discuss.incutio.com/wiki/Printing_Tables
   */
  thead {
    display: table-header-group; }

  tr,
  img {
    page-break-inside: avoid; }

  img {
    max-width: 100% !important; }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3; }

  h2,
  h3 {
    page-break-after: avoid; } }
body {
  background: #fcfcfc; }

header {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100; }
  header h1 {
    background-color: #fcfcfc;
    cursor: pointer;
    font-size: 1.625em;
    line-height: 1.84615384615385em;
    margin: 0;
    padding: 0.75rem 0;
    text-align: center;
    text-transform: uppercase;
    width: 100%; }
  header div {
    background-color: #fcfcfc;
    border-bottom: 1px solid rgba(29, 33, 40, 0.05);
    border-top: 1px solid rgba(29, 33, 40, 0.05);
    height: 3em;
    position: relative; }
    header div > .fa {
      display: block;
      line-height: 1.5em;
      padding: 0.75rem 0 0.75rem 1rem;
      text-align: left;
      width: 100%;
      position: absolute;
      z-index: 101; }
    header div div p {
      margin: 0;
      text-align: center; }
      header div div p .fa {
        line-height: 1.5em;
        margin: 0.75rem 1em 0.75rem 0; }
  header nav {
    background-color: rgba(29, 33, 40, 0.85);
    bottom: 3rem;
    color: #fcfcfc;
    display: none;
    padding: 0.75em 0;
    width: 100%; }
    header nav ul {
      margin: 0;
      padding: 0; }
      header nav ul li {
        float: left;
        list-style-type: none;
        padding: 0.5em 0 0.5em 0.75em;
        width: 33.3333%; }
        header nav ul li input[type="radio"] {
          display: none; }
          header nav ul li input[type="radio"] + label .fa-circle-o {
            float: left;
            line-height: 1.5em;
            padding: 0 0.75em 0 0.25em; }
          header nav ul li input[type="radio"] + label .fa-check-circle-o, header nav ul li input[type="radio"]:checked + label i {
            float: left;
            line-height: 1.5em;
            padding: 0 0.75em 0 0.25em; }

section {
  margin-top: 7.5em; }
  section div {
    border-right: 1px solid #fcfcfc;
    border-bottom: 1px solid #fcfcfc;
    float: left;
    overflow: hidden;
    position: relative;
    width: 33.3333%; }
    section div:nth-child(3n+3) {
      border-right: none; }
    section div img {
      cursor: pointer;
      display: block;
      position: relative;
      right: 30%;
      width: 160%; }
    section div figure {
      display: none; }
  section #loader {
    padding-top: 7.5em;
    width: 100%; }
    section #loader i {
      color: #1d2128;
      font-size: 3em;
      text-align: center;
      width: 100%; }
  section .no-js-gallery {
    display: none; }
/* ... */

